src/components/summary/index.module.scss
@import 'mixins';

.wrapper {
  // min-width: 300px;
  // max-width: 400px;
  width: 27%;
  background-image: url(/images/bg01.jpg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  display: flex;
  flex-direction: column;

  @include screen-adapt('phone') {
    transition: width 1s;
    width: 0;
  }

  @include screen-adapt('pad') {
    transition: width 1s;
    width: 0;
  }
}

.active {
  display: block;
  position: fixed;
  top: 0;
  left: 0;
  width: 300px;
  height: 100%;
  z-index: 100;
  opacity: 1;

  .avator {
    display: inline-block;
    opacity: 1;
  }

  .top-action {
    span {
      opacity: 1;
    }
  }

  .mainly {
    opacity: 1;
  }
}

.avator {
  text-align: center;
  height: 15px;
  width: 100%;
  height: auto;

  @include screen-adapt('phone') {
    transition: opacity 0.6s ease-out;
    opacity: 0;
  }

  @include screen-adapt('pad') {
    transition: opacity 0.6s ease-out;
    opacity: 0;
  }
}

.top-action {
  text-align: right;
  font-size: 18px;

  span {
    display: inline-block;
    padding: 10px 15px;
    color: #fff;
    opacity: 0;
    transition: opacity 0.6s ease-out;
  }
}

.mainly {
  flex: 1;
  overflow: auto;
  @include screen-adapt('phone') {
    transition: opacity 0.6s ease-out;
    opacity: 0;
  }
}

.summary {
  color: #fff;
  text-align: center;
  font-size: 25px;
  animation: swing 2s infinite;
  margin-top: 20px;
}

@keyframes rotateImgY {
  0% {
    transform: rotateY(0deg);
  }
  25% {
    transform: rotateY(360deg);
  }
  100% {
    transform: rotateY(360deg);
  }
}

.imageAvator {
  border-radius: 50%;
  // display: inline-block;
  width: 100px;
  height: 100px;
  transition: transform 0.5s;

  &:hover {
    animation: avatorRotate 2s linear infinite;
  }
  // animation: rotateImgY 4s linear infinite;
}

@keyframes avatorRotate {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}


.content {
  list-style-type: disc;
  font-size: 14px;
  line-height: 24px;
  font-style: italic;
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 10px;
  padding: 20px 30px;
  margin: 20px;
  color: #fff;
}

@keyframes swing {
  20% {
    transform: rotate(15deg)
  }

  40% {
    transform: rotate(-15deg)
  }
  60% {
    transform: rotate(5deg)
  }
  80% {
    transform: rotate(-15deg)
  }
  100% {
    transform: rotate(0deg)
  }
}

